3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

MSW 2000/12/5:
server/player.c: Move location of where it sets the player has_hit variable
until after we have confirmed that the player has actually attacked a monster
and not that the space is blocked.  Fixes various problems and make
behaviour more predictable.
common/button.c: Do not set path_attuned when loading connected objects from within
the editor.  This is normally done for random map code/glue logic.
common/player.c: When trying to find a skill to use, use a native skill
first before going off and returning a skill object like a talisman.

MSW 2000/12/4:
common/treasure.c: Make it so resistances from artifact files are absolute 
	adjustments.
Makefile.in configure configure.in: Fix check for libdes to see if des_crypt
	exists in libdes before setting HAVE_LIBDES
crossedit/Makefile.in:  Add Cnv/libCnv.a before LIBS - should fix
	linking error on irix systems.
utils/metaserver.pl: modified so it ignores entries from hosts that 
	report their name as put.your.hostname.here

MSW 2000/12/3:
crossedit/Attr.c: Add the new resist names to set of variables one can set.

MSW 2000/12/3:
Misc changes.  Main one is adding PNG support to the editor.
TODO: Remove outdated things to do (like partial resistance code)
configure, configure.in, include/autoconf.h.in: Add check for libpng.
include/global.h: Remove displaymodes - moved to crossedit/Defines.h
crossedit/App.c, crossedit/App.h crossedit/CrEdit.c crossedit/CrFace.c
  crossedit/CrList.c crossedit/CrUtil.c crossedit/Edit.c crossedit/crossedit.c 
  crossedit/xutil.c, crossedit/png.c (new file): Add support for png display
  in crossedit.